# AI_Workshop

./: .gitattributes  .gitignore  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/resources/: .zshrc  starship.toml  welcome.txt
iris_classifier/src/iris_classifier/: Iris_classifier.ipynb
iris_classifier/src/solution/: intro_visualization.ipynb  iris_classifier_solved.ipynb
